--- a/references.bib
+++ b/references.bib
@@ -703,3 +703,62 @@ abstract = {Per- and polyfluoroalkyl substances (PFASs) were reported to be used
   author       = {Shen, Lucas and Tint, Mya Thway and Lee, Yung Seng and Yap, Fabian and Chong, Yap Seng and Godfrey, Keith M. and Eriksson, Johan G. and Huang, Jonathan Y.},
   year         = {2025},
 }
+
+@article{Yang2025,
+title = {Per- and polyfluoroalkyl substances (PFAS) in urbanized coastal zones: spatiotemporal distribution, phase partitioning dynamics, and risk assessment in Shenzhen, China},
+journal = {Environment International},
+volume = {206},
+pages = {109956},
+year = {2025},
+issn = {0160-4120},
+doi = {https://doi.org/10.1016/j.envint.2025.109956},
+url = {https://www.sciencedirect.com/science/article/pii/S016041202500707X},
+author = {Chang-Ping Yang and Qia-Er Wu and Chun-Bin Jia and Yan Liu and Liang-Ming Wang and Bin-Bin Shan and Ning Liu and Cheng Chen and Man-Ting Liu and Ying-Bang Huang and Dian-Rong Sun},
+keywords = {Emerging contaminants, Coastal pollution, Phase partitioning, Risk assessment},
+abstract = {Per- and polyfluoroalkyl substances (PFAS) are persistent environmental contaminants of global concern. This study investigated the occurrence of 29 PFAS compounds across dissolved phase, suspended particulate matter (SPM), and surface sediment in four coastal zones of Shenzhen, China—a megacity undergoing intensive development. Results revealed widespread PFAS contamination, with total concentrations ranging from 4.306–53.716 ng/L (dissolved phase), 0.30–22.259 ng/L (SPM), and 0.561–20.354 ng/g (sediment). Short-chain perfluoroalkyl carboxylates (PFCAs, C4–C6) dominated aqueous phases (58.5% of Σ29PFAS), while long-chain PFCAs (≥C7) prevailed in SPM (68.1%) and sediments (69.4 %), reflecting chain-length-dependent partitioning. Spatial analysis identified the Pearl River Estuary (PRE) as a PFAS hotspot, with levels 2.5–3.5 times higher than adjacent bays, probably linked to fluvial inputs from industrial and urban sources. Historical data for the PRE further revealed contrasting temporal trends: PFOS concentrations declined markedly from 33.91 ng/L in 2012 to 2.06 ng/L in 2020, consistent with global phase-out measures, whereas PFOA levels peaked in 2020 (27.73 ng/L) before decreasing to 1.88 ng/L in 2023, likely reflecting its initial use as a PFOS substitute and subsequent regulatory control. Sediment-water partitioning coefficients (log Kd) increased by 0.33–0.35 log units per CF2 moiety, highlighting hydrophobic interactions as the key driver. Ecological risk assessment indicated low-to-moderate risks (RQs: 0.003–0.155), with PFOS in sediments near airports and industrial zones of PRE posing localized concerns. As the first comprehensive and systematic study on PFAS in the Shenzhen coastal area, this work provides novel insights into the distribution, partitioning behavior, and ecological risks of these persistent environmental contaminants. The findings underscore the need for source-specific management strategies to mitigate PFAS impacts in coastal urban environments.}
+}
+
+@article{li2025crops,
+  title        = {Mapping Legacy and Emerging PFAS in China’s Staple Crop Farmlands: Occurrence, Source Tracing, and Risk Prioritization from Paired Soil--Crops},
+  author       = {Li, Xiaomin and Zhao, Nannan and Li, Tong and Wang, Ruiguo and Liu, Xin and Qian, Chengjing and Liu, Yuxin and Zhang, Weiwei and Fu, Jianjie},
+  journal      = {Environmental Science \& Technology},
+  year         = {2025},
+  volume       = {59},
+  number       = {41},
+  pages        = {22239--22250},
+  doi          = {10.1021/acs.est.5c11221},
+  url          = {https://doi.org/10.1021/acs.est.5c11221},
+  abstract     = {Per- and polyfluoroalkyl substances (PFAS) are increasingly detected in agricultural environments, yet national-scale data on PFAS contamination in paired food crops and soils remain scarce. This study presents the first nationwide investigation of legacy and emerging PFAS in paired soil and grain samples (n = 160) from 11 provinces representing China’s major rice, wheat, and maize producing regions. PFAS were ubiquitously found in soils (median: 4.96 ng/g; range: 2.28--33.5 ng/g) and grains (7.74 ng/g; 2.40--25.3 ng/g), with short-chain perfluoroalkyl carboxylic acids being the dominant class. The emerging-to-legacy PFAS ratio was 2.16 in soils and 4.26 in grains, and crop PFAS levels were 1.5 times higher than those in corresponding soils, indicating the greater propensity of emerging PFAS to be transported into crops. Paddy soils exhibited significantly higher PFAS concentrations than dryland soils (p < 0.05), likely due to irrigation-driven accumulation. Intensive anthropogenic activities were positively related to PFAS concentrations in soils (r = 0.54, p < 0.05). PMF analysis attributed PFAS sources primarily to food packaging, textile processing, and fluorochemical industries. Risk prioritization using the ToxPi framework highlighted PFPeA, PFOA, PFOS, and HFPO--DA as priority compounds.}
+}
+
+@article{zhang2025fruits,
+  title        = {A Dominating Role of Functional Groups in Short-Chain Per- and Polyfluoroalkyl Substance (PFAS) Accumulation by Fruiting Plants},
+  author       = {Zhang, Jingjing and Shi, Qingyang and Yates, Rebecca and Liu, Zhaoyang and Gan, Jay},
+  journal      = {Environmental Science \& Technology},
+  year         = {2025},
+  doi          = {10.1021/acs.est.5c07872},
+  url          = {https://doi.org/10.1021/acs.est.5c07872},
+  abstract     = {Many per- and polyfluoroalkyl substances (PFAS) have either carboxylic acid or sulfonic acid as their polar functional group. Studies to date have consistently shown that accumulation of short-chain PFAS containing sulfonic acid in fruits is much more limited than those with carboxylic acid, but the underlying mechanisms are not known. This study examines transport and accumulation of PFPeA and PFBS in tomato plants, showing that sulfonic acid functional groups strongly impede translocation to fruits and mitigate food-chain transfer and human exposure.}
+}
+
+@article{LEADER2025,
+title = {Transplacental transfer efficiency of environmental chemicals in association with gestational diabetes mellitus},
+journal = {Environment International},
+volume = {205},
+pages = {109865},
+year = {2025},
+issn = {0160-4120},
+doi = {https://doi.org/10.1016/j.envint.2025.109865},
+url = {https://www.sciencedirect.com/science/article/pii/S0160412025006166},
+author = {Jordana Leader and Jessica Robinson and Brian Whitcomb and Damaskini Valvi and Chia-Yang Chen and Yap Seng Chong and Kok Hian Tan and Sharon Ng and James Chun Yip Chan and Johan G. Eriksson and Shiao-Yng Chan and Jonathan Huang and Youssef Oulhote},
+abstract = {Background
+Many environmental chemicals have been shown to cross the placental barrier, threatening the health of offspring. Additionally gestational diabetes mellitus (GDM) may affect the transplacental transfer ratios (TTRs) of environmental chemicals, but the rate of transfer of a wide variety of environmental chemicals have not been widely studied.
+Objective
+We examined the TTRs of per- and poly- fluoroalkyl substances (PFAS), phthalates, parabens, bisphenols, and benzophenones in pregnant women, and if GDM increases transplacental transfer of these chemicals.
+Methods
+We examined 576 mother-newborn pairs from the Growing up in Singapore Towards healthy Outcomes (GUSTO) birth cohort enrolled 2009–2010. Fetal cord plasma to maternal plasma ratios from samples around delivery (TTRs) were estimated for 10 PFAS, 6 phthalates, bisphenol-S (BPS), 2 parabens, and 2 benzophenones. GDM was defined as elevated fasting plasma glucose or 2 h plasma glucose from an oral glucose tolerance test at mid-gestation. We estimated covariate-adjusted associations of GDM with TTRs using multivariable regressions.
+Results
+Median TTRs ranged from 0.13 for benzophenone to 2.2 for mono-2-ethylhexyl phthalate. Overall, TTRs were highest for phthalates and short-chain PFAS and lowest for benzophenone and long-chain PFAS. GDM was significantly associated with higher TTRs for perfluorooctanoic, perfluorononanoic, and perfluoroheptanoic acids, BPS, monoethyl phthalate, and oxybenzone. Mothers with GDM had 15% (95% confidence intervals [CI]: 5%, 25%) and 123% (95% CI: 32%, 214%) higher TTRs for oxybenzone and BPS respectively as compared to mothers without GDM.
+Conclusions
+We found high TTRs for multiple short half-life chemicals and more recently introduced short-chain PFAS. Importantly, GDM was associated with increased transplacental efficiency of several classes of environmental chemicals, particularly chemicals with shorter half-lives.}
+}
